--- a/notes.html
+++ b/notes.html
@@ -1,7 +1,8 @@
 <h6>
   Layer and plot data compiled from <a href="http://mapspam.info">SPAM</a> and <a href="https://www.isric.org/projects/soil-property-maps-africa-250-m-resolution">ISRIC</a>.
   Population information estimated using WorldPop 2020 UN-adjusted 1km resolution raster found in <a href="https://www.worldpop.org/doi/10.5258/SOTON/WP00004">worldpop.org</a>.
-  <br>
-  For more information email <a href="mailto:j.chamberlin@cgiar.org">Jordan Chamberlin</a> or <a href="mailto:s.palmas@cgiar.org">Sebastian Palmas</a>.
   The code for this Shiny app is in <a href="https://github.com/spalmas/acidsoils-explorer">github.com/spalmas</a>
+  <br>
+
+  For more information contact <a href="mailto:j.chamberlin@cgiar.org">Jordan Chamberlin</a> or <a href="mailto:s.palmas@cgiar.org">Sebastian Palmas</a>.
 </h6>
